spacesim.css
.btn-group-justified {
  display: table;
  width: 100%;
  table-layout: fixed;
  border-collapse: separate;
}
.btn-group-justified .btn,
.btn-group-justified .btn-group {
  float: none;
  display: table-cell;
  width: 1%;
}
.btn-group-justified .btn .btn,
.btn-group-justified .btn-group .btn {
  width: 100%;
}
.btn-group-justified .btn .dropdown-menu,
.btn-group-justified .btn-group .dropdown-menu {
  left: auto;
}

input, textarea {
  background-color: transparent;
  color: #ffc107;
}
::-webkit-input-placeholder { /* WebKit browsers */
  color: #ffc107;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
  color: #ffc107;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
  color: #ffc107;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
  color: #ffc107;
}
input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
  color: #ffc107;
}
input:-moz-placeholder, textarea:-moz-placeholder {
  color: #ffc107;
}

